--- a/U6_A2/aboutus.htm
+++ b/U6_A2/aboutus.htm
@@ -52,7 +52,7 @@ Celtec develops games across multiple genres, ensuring<br>
 every project is crafted with passion and precision<br>
 </h3>
 
-<img src="images/aboutus.jpg" alt="Image of People Gaming" style="position: absolute; right:425px;bottom:145px;width:500px;height:350px">
+<img src="images/Aboutus.jpg" alt="Image of People Gaming" style="position: absolute; right:425px;bottom:145px;width:500px;height:350px">
 
 </main>
 
