--- a/U6_A2/contact.htm
+++ b/U6_A2/contact.htm
@@ -68,7 +68,7 @@ dates, Celtec products or anything similar<br>
 
 </div>
 
-<img src="images/Contact.PNG" alt="Image of People Gaming" style="position: absolute; right:450px;width:500px;height:350px;bottom:-200px;">
+<img src="images/contact.PNG" alt="Image of People Gaming" style="position: absolute; right:450px;width:500px;height:350px;bottom:-200px;">
 
 </body>
 
