--- a/U6_A2/aboutus.htm
+++ b/U6_A2/aboutus.htm
@@ -8,11 +8,13 @@
 <link href="CTstyles.css" rel="stylesheet" type="text/css">
 
 </head>
-
+  
 <div id="page">
 
 <body>
 
+<meta name="description" content="This page is about celtec and what they sell">
+  
 <center><img src="images/banner_02.png" alt="Image of the Celtec Banner" style="width:1000px;height:300px"</center>
 <center><h1>About Celtec</h1></center> 
 
